# libpst

./: Makefile.am  README  TODO
html/: Makefile.am
info/: Makefile.am
man/: Makefile.am
python/: python-libpst.cpp
src/: libpst.c  pst2dii.cpp.in  readpst.c
xml/: libpst.in
